<resources>
    <string name="app_name">Zaxroid</string>
    <string name="txt_notification_permission">Notification Permission</string>
    <string name="txt_notification_permission_message"><b>Zaxroid</b> needs notification permission to function properly and play an alarm when you need it! \n\n <u>Security Note:</u> Please refer to our privacy and policy section to learn about how we protect your data.</string>
    <string name="waiting_for_messages">I am watching messages…</string>
    <string name="no_application_found">No Application Found!</string>
    <string name="add_application">Hello, I am Zax</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="txt_add_app">Add Application</string>
    <string name="txt_search">Search</string>
    <string name="txt_empty_state_desc">Click the + button to add your app or website, and I will keep a lookout for any important updates. You\'ll receive alarm from me!</string>
    <string name="txt_play_number_out_of_range">Out of range, Should be between 1 to 10!</string>
    <string name="application_save_success">Application saved successfully!</string>
    <string name="application_updated_success">Application updated successfully!</string>
    <string name="txt_application_exists">Application already added!</string>
    <string name="app_delete_success">Application deleted successfully!</string>
    <string name="app_delete_error">Can\'t delete application, Try again!</string>
    <string name="delete_app_message">Do you want to delete this app?</string>
    <string name="delete_app_title">Delete Application</string>
    <string name="update_successful">Application updated successfully!</string>
    <string name="update_error">Can\'t update Application!</string>
    <string name="time_constrain_error">Start time needs to be less than end time, and between one day!</string>
    <string name="txt_discard">Discard</string>
    <string name="txt_discard_changes">Discard Changes?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_author">Author</string>
    <string name="txt_developed_designed_by"><![CDATA[Developed & Designed By]]></string>
    <string name="txt_company_info">A star-up software development team, with 100% dedicated peoples! With a long vision.</string>
    <string name="txt_app_info">App Info</string>
    <string name="txt_location_developer">9250 DM, Khulna, Bangladesh</string>
    <string name="txt_version">Version: 1.0.1</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Theme</string>
    <!-- Sync Preferences -->
    <string name="email_us">Email us</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="txt_themes">Themes</string>
    <string name="txt_not_background">Not working sometime?</string>
    <string name="notification_channel">sells_post</string>
    <string name="notification_channel_name">posts</string>
    <string name="txt_search_app">Search Apps</string>
    <string name="txt_mute">Mute App</string>
    <string name="txt_alarm_mute">Mute time</string>
    <string name="txt_remove_from_snooze">Remove from Snooze</string>
    <string name="txt_remove">Remove</string>
    <string name="txt_invalid_request">Invalid request!</string>
    <string name="txt_application_muted">I am resting!</string>
    <string-array name="spinner_item">
        <item>All Apps</item>
        <item>Messaging</item>
    </string-array>
    <!--base url-->
    <string name="base_url">http://www.messagealarm.app/api/</string>
    <string name="base_url_heroku">https://messagealarmpushservice.herokuapp.com/api/</string>
    <string name="txt_selected_music_duration">Music must need be at least 30 seconds!</string>
    <string name="txt_wrong_duration">Wrong Duration</string>
    <string name="txt_music">Wrong music format</string>
    <string name="txt_try_again">Please try again!</string>
    <string name="notify_channel_id">AlarmDismissID</string>
    <string name="notify_channel_name">AlarmDismissName</string>
    <string name="notify_channel_description">AlarmDismissDescription</string>
    <string name="txt_skip">SKIP</string>
    <string name="txt_desc_first">Click on the rounded + button, for adding application. Message from this applications, will play alarm!</string>
    <string name="desc_quick_start_two">Filter by messaging, and choose application from the list. Choose preferences from the next screen and save application!</string>
    <string name="desc_quick_start_third">Set custom time, set custom sender names, Only messages from this names will play alarm. Also you can filter alarm by message body!</string>
    <string name="desc_quick_start_four">This sticky notification indicates that the application is alive and waiting for message, Click on the notification button to mute and un-mute application, The power button turn off the sticky notification and kills the service</string>
    <string name="desc_quick_start_five">This is at setting page, set automatic mute time, application will be un-mute after that time. If your phone killing this application when app is in background. Click on that bottom button and follow the instruction</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_add_sender_name">Add Sender Name</string>
    <string name="txt_sender_name">Sender Name...</string>
    <string name="txt_save">Save</string>
    <string name="txt_clear_message_body">Clear Message Body</string>
    <string name="txt_desc_clear_message">Do you wants to clear message body?</string>
    <string name="txt_clear_sender_name">Clear Sender Names</string>
    <string name="txt_clear_ignore_name">Clear Ignored names</string>
    <string name="txt_desc_clear_sender_namne">Do you wants to clear sender names?</string>
    <string name="txt_desc_clear_ignored_namne">Do you wants to clear ignored names?</string>
    <string name="txt_alarm_repeat">Alarm repeat</string>
    <string name="txt_hint_sender_name">Hint: Please add complete name with space!</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_swipe_bottom_to_expand">Swipe bottom to expand</string>
    <string name="alarm_service">Alarm Service</string>
    <string name="not_supperted">Sorry your device doesn\'t support this app!</string>
    <string name="txt_lang_error">Sorry, Our application right now doesn\'t support your phone language! You may get unexpected alarms if you don\'t take this action, Please contact us by mentioning what language you want. We will start work on it real soon, and you will be notified when it’s ready! For now switch to English or hold on, until we get back to you. Thanks for understanding</string>
    <string name="sell_notice">5% of total revenue goes to poor children\'s for education and food!</string>
    <string name="better_exprience">We know you hate ads, that\'s why \n we said goodbye to it!</string>
    <string name="txt_idea_desc">We can help you develop your dream project. Contact with us, we will have a meeting with you!</string>
    <string name="missing_file">File is missing!</string>
    <string name="text_terms_policy">When you click \'Get Started\' you accept our <a href="https://www.messagealarm.app/privacy_policy"><u>Privacy Policy</u></a>. We recommend you review our policies so you can understand what we are doing with the permission and data we are taking from our users</string>
    <string name="text_sub_title_privacy">Please take your time to review the key points of our <a href="https://www.messagealarm.app/privacy_policy">Privacy Policy</a> and how we process your data.</string>
    <string name="text_demo_providing">• Providing, improving, analyzing and personalizing our services.</string>
    <string name="made_in_bangladesh">made by</string>
    <string name="text_pro"><u>Check What PRO Version give?</u></string>
    <string name="text_pro_amount">BUY PRO - BDT 199 <u>BDT 300</u></string>
    <string name="txt_checkout_pro"><u>Checkout What We are Offering In PRO!</u></string>
    <string name="how_we_use_notification_permission">We take this permission so we can read and parse the notification title and body, based on this we generate an alarm when matched with your preset constraints and filters</string>
    <string name="how_we_use_your_notification_permission">How we use your notification permission</string>
    <string name="hint_just_vibration">Get alarmed by only vibration, best use case is in pocket! \n\n<b>No Sounds, Just Vibrations!</b></string>
    <string name="hint_sound_control">Get full volume for Alarm, You can control the volume!</string>
    <string name="hint_sound_subtitle">1 Alarm reduce 1% volume until 50%, <b>you reached 71%</b></string>
    <string name="vibration_and_sound_hint">Vibration and music together, powerful alarm. \n\n<b>Best use case, enough power to awake you up from sleep!</b></string>
    <string name="subscribe_value_txt">Subscribe For\n $0.99/Mo</string>
    <string name="onetime_payment_txt">Onetime Payment\n For $149.99</string>
    <string name="privacy_policy"><a style="color: red" href="https://www.messagealarm.app/privacy_policy"><u>Privacy Policy</u></a></string>
    <string name="terms_condition"><a style="color: red" href="https://www.messagealarm.app/privacy_policy"><u>Terms &amp; Condition</u></a></string>
    <string name="txt_details_subscribe">Recurring Billing. Cancel anytime you want.</string>
    <string name="txt_subs_button">Subscribe Now</string>
    <string name="txt_in_app_button">Subscribe Now</string>
    <string name="setup_alarm">Setup Alarm</string>
    <string name="only_if_headphone_is_connected">Only if headphone is connected!</string>
    <string name="set_an_alarm_to_notify_you_when_you_receive_an_important_message">Set an alarm to notify you when you receive an important message</string>
    <string name="both_can_work_together">Both can work together</string>
    <string name="speak">Speak</string>
    <string name="alarm">Alarm</string>
</resources>
