<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--App Snooze-->

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:layout="@layout/preference_category"  app:title="@string/txt_mute">

        <ListPreference
            android:key="mute"
            android:title="@string/txt_alarm_mute"
            app:enabled="true"
            app:entries="@array/mute_entries"
            app:entryValues="@array/mute_values"
            app:icon="@drawable/ic_baseline_snooze_24"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--Theme -->
    <PreferenceCategory
        app:title="@string/txt_themes"
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        android:key="theme_cat"
        app:layout="@layout/preference_category">

        <Preference
            app:icon="@drawable/ic_color_lens_black_24dp"
            app:key="theme_pro"
            android:enabled="true"
            app:summary="Buy PRO to enable dark mode"
            app:title="Theme" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/theme_entries"
            app:entryValues="@array/reply_values"
            app:icon="@drawable/ic_color_lens_black_24dp"
            app:key="theme"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!--support-->
    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:layout="@layout/preference_category" app:title="Support">

        <Preference
            app:icon="@drawable/ic_baseline_chat_24"
            app:key="chat"
            app:summary="We are online"
            app:title="Chat with us" />

        <Preference
            app:icon="@drawable/ic_email_black_24dp"
            app:key="email"
            app:summary="For any kind of help, send us email"
            app:title="@string/email_us" />


    </PreferenceCategory>

    <!--tutorial-->
    <PreferenceCategory
        app:title="Tutorial"
        android:key="tutorial_category"
        app:allowDividerBelow="false" app:allowDividerAbove="false" app:layout="@layout/preference_category">

        <Preference
            app:icon="@drawable/ic_baseline_ondemand_video_24"
            app:key="tutorial"
            app:summary="Watch how our app works"
            app:title="Tutorial" />

        <Preference
            app:icon="@drawable/ic_help_black_24dp"
            app:key="background_not_working"
            app:summary="Here we have detailed guidelines"
            app:title="@string/txt_not_background" />

    </PreferenceCategory>


    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:layout="@layout/preference_category" app:title="Share">

        <Preference
            app:icon="@drawable/ic_share_black_24dp"
            app:key="share"
            app:summary="Tell a friend"
            app:title="Share this app" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:layout="@layout/preference_category"  app:title="About">

        <Preference
            app:icon="@drawable/ic_info_black_24dp"
            app:key="about"
            app:summary="Information about this app"
            app:title="About" />

    </PreferenceCategory>

</PreferenceScreen>