<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_gravity="bottom"
    android:layout_margin="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_discard"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_discard_changes"
            app:layout_constraintStart_toStartOf="@id/txt_discard"
            app:layout_constraintEnd_toEndOf="@id/txt_discard"
            app:layout_constraintTop_toBottomOf="@id/txt_discard"
            android:layout_marginTop="22dp"
            android:textSize="16sp"
            />

        <View
            android:id="@+id/main_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_changes"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintTop_toBottomOf="@id/main_line"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:orientation="horizontal"
           >

           <TextView
               android:id="@+id/btn_cancel"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/txt_cancel"
               android:textStyle="normal"
               android:gravity="center"
               android:foreground="?selectableItemBackground"
               android:textSize="16sp"
               android:layout_height="match_parent"
               tools:targetApi="m" />


           <View
               android:layout_width="1dp"
               android:background="@android:color/darker_gray"
               android:layout_height="match_parent"/>

           <TextView
               android:id="@+id/btn_discard"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/txt_discard"
               android:gravity="center"
               android:textSize="16sp"
               android:foreground="?selectableItemBackground"
               android:textStyle="bold"
               android:textColor="@color/colorAccent"
               android:layout_height="match_parent"
               tools:targetApi="m" />

       </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>