<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    android:minHeight="150dp"
    app:cardBackgroundColor="@color/card_view_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title_sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_sender_name"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/default_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="16dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_hint_sender_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Hint: Please add the complete name from WhatsApp!"
            android:fontFamily="@font/roboto_medium_italic"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextRegular"
            android:maxLines="2"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_title_sender_name"
            app:layout_constraintStart_toStartOf="@id/txt_title_sender_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="5dp"
            />


        <EditText
            android:id="@+id/et_sender_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/sender_name_background"
            android:gravity="start"
            android:hint="@string/txt_sender_name"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorTextRegular"
            android:textColorHint="#808080"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_sender_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_hint_sender_name"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="45dp"
            android:layout_height="36dp"
            android:text="Add"
            android:background="@drawable/add_button_background"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textColor="#ffffff"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/et_sender_name"
            app:layout_constraintBottom_toBottomOf="@id/et_sender_name"
            app:layout_constraintEnd_toEndOf="@id/et_sender_name"
            app:layout_constraintStart_toStartOf="@id/et_sender_name"
            app:layout_constraintHorizontal_bias="1"
            android:foreground="?selectableItemBackground"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_sender_name"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="160dp"
            app:layout_constraintTop_toBottomOf="@id/et_sender_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            android:layout_margin="16dp"
            />


        <ImageView
            android:id="@+id/img_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/empty_box"
            android:scaleType="fitCenter"
            android:padding="30dp"
            app:layout_constraintTop_toTopOf="@id/recycler_view_sender_name"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view_sender_name"
            app:layout_constraintEnd_toEndOf="@id/recycler_view_sender_name"
            app:layout_constraintStart_toStartOf="@id/recycler_view_sender_name"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>